python-oslo.i18n (3.7.0-1) experimental; urgency=medium

  [ David Della Vecchia ]
  * New upstream release.
  * d/control: Align (build-)depends with upstream.

  [ Corey Bryant ]
  * d/control: Align python-oslo.config BD with upstream.

  [ Thomas Goirand ]
  * Drop python-oslo-* transition packages not needed since Xenial.

 -- Thomas Goirand <zigo@debian.org>  Fri, 01 Jul 2016 14:48:09 +0000

python-oslo.i18n (3.6.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * d/rules: Changed UPSTREAM_GIT protocol to https
  * d/copyright: Changed source URL to https protocol

  [ Corey Bryant ]
  * New upstream release.
  * d/gbp.conf: Update branch for Newton.
  * d/control: Align (Build-)Depends with upstream.

  [ Thomas Goirand ]
  * Added Corey Bryant as uploader.

 -- Thomas Goirand <zigo@debian.org>  Fri, 03 Jun 2016 07:24:08 +0000

python-oslo.i18n (3.5.0-2) unstable; urgency=medium

  * Uploading to Unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 07:43:55 +0000

python-oslo.i18n (3.5.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed version of python{3,}-oslo.config in build-depends-indep.

 -- Thomas Goirand <zigo@debian.org>  Sat, 02 Apr 2016 14:26:11 +0200

python-oslo.i18n (3.4.0-1) experimental; urgency=medium

  [ David Della Vecchia ]
  * d/control: Align depends with upstream.

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Standards-Version: 3.9.7 (no change).

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Mar 2016 12:31:47 +0000

python-oslo.i18n (3.2.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Fri, 15 Jan 2016 05:52:54 +0000

python-oslo.i18n (3.1.0-1) experimental; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jan 2016 01:20:32 +0000
